tests/core/data/csl/InterfaceTests/InvalidDeclarations/invalidInterfaceWithComponentAsParameter.csl
/*
	Invalid interface to verifiy that exceptions cannot be passed as parameters in methods
 */
interface invalidInterfaceWithComponentAsParameter 
{
	void alpha( in testComponent comp );
};


